--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -65,6 +65,15 @@
                 width: auto !important;
             }
         }
+
+        .htmx-indicator {
+            display: none;
+        }
+
+        .htmx-request .htmx-indicator,
+        .htmx-request.htmx-indicator {
+            display: inline-block;
+        }
     </style>
 </head>
 
